[gd_scene load_steps=4 format=3 uid="uid://mrk845qek6yp"]

[ext_resource type="Script" uid="uid://cmj87xdnse416" path="res://data/monsters/monster_display.gd" id="1_hsu1a"]
[ext_resource type="Texture2D" uid="uid://cejtiqwkff763" path="res://icon.svg" id="2_2io4t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bpyqy"]
size = Vector2(130.5, 120)

[node name="MonsterDisplay" type="Node2D"]
script = ExtResource("1_hsu1a")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_top = -3.0
offset_right = 116.0
offset_bottom = 76.0

[node name="MonsterImage" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(56, -63)
texture = ExtResource("2_2io4t")

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Monster Name"

[node name="LifeBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
show_percentage = false

[node name="LifeLabel" type="Label" parent="VBoxContainer/LifeBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
text = "Placeholder stats"
autowrap_mode = 3

[node name="Area2D" type="Area2D" parent="."]

[node name="MonsterClickable" type="CollisionShape2D" parent="Area2D"]
position = Vector2(57.75, -66)
shape = SubResource("RectangleShape2D_bpyqy")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
